# bist100-ai-platform

./: .env  .env.example  .gitignore  README.md  START.md  dashboard.py  docker-compose.yml  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  router.py
app/api/: __init__.py  main.py
app/core/: __init__.py  config.py
app/data_sources/: __init__.py
app/db/: models.py  session.py
app/models/: __init__.py  schemas.py
app/rag/: __init__.py  ingest.py  local_retriever.py  mock_retriever.py
app/services/: __init__.py  analysis_run_service.py  ask_service.py  chart_feature_service.py  company_profile_enrichment_service.py  company_service.py  company_universe_service.py  db_service.py  event_service.py  fundamental_service.py  garanti_sso_service.py  global_event_service.py  global_news_watch_service.py  ingest_service.py  institutional_flow_service.py  macro_event_cleanup_service.py  macro_event_ingest_service.py  macro_event_service.py  macro_rule_mapping.py  market_calendar_service.py  market_data_cache_service.py  market_data_service.py  market_scan_service.py  news_impact_service.py  news_service.py  news_to_macro_service.py  paper_decision_log_service.py  paper_trade_simulation_service.py  recommendation_policy.py  replay_evaluation_service.py  runtime_scheduler_service.py  signal_service.py  technical_indicator_text_service.py  telegram_service.py  trading_agent_decision_service.py  trading_agent_learning_weights_service.py  trading_agent_replay_service.py  trading_agent_service.py  (+2 more)
docs/: ARCHITECTURE.md  PLAN_12_WEEKS.md  SPRINT_01.md
(+48 files in other folders)
