[project]
name = "bist100-ai-platform"
version = "0.1.0"
description = "BIST100 odakli AI knowledge and signal platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.2",
  "pydantic-settings==2.8.1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "streamlit>=1.44,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
